demos/grpc/record-server/kube/overlays/dev/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: presentation-server
spec:
  rules:
  - host: dev.apps.v2tools.com
    http:
      paths:
      - path: /presentations/api/(.*)
        backend:
          serviceName: presentation-server
          servicePort: grpc-web
  tls:
  - hosts:
    - dev.apps.v2tools.com
    secretName: dev-apps-v2tools-crt
